@@ -318,7 +318,7 @@ conf_create(void)
 	conf->read_only = false;
 	conf->read_only_direct = false;
 	conf->recache = false;
-	conf->run_second_cpp = false;
+	conf->run_second_cpp = true;
 	conf->sloppiness = 0;
 	conf->stats = true;
 	conf->temporary_dir = x_strdup("");
