@@ -73,7 +73,7 @@ TEST(conf_create)
 	CHECK(!conf->read_only);
 	CHECK(!conf->read_only_direct);
 	CHECK(!conf->recache);
-	CHECK(!conf->run_second_cpp);
+	CHECK(conf->run_second_cpp);
 	CHECK_INT_EQ(0, conf->sloppiness);
 	CHECK(conf->stats);
 	CHECK_STR_EQ("", conf->temporary_dir);
@@ -123,7 +123,7 @@ TEST(conf_read_valid_config)
 	  "read_only = true\n"
 	  "read_only_direct = true\n"
 	  "recache = true\n"
-	  "run_second_cpp = true\n"
+	  "run_second_cpp = false\n"
 	  "sloppiness =     file_macro   ,time_macros,  include_file_mtime,include_file_ctime,file_stat_matches,pch_defines ,  no_system_headers  \n"
 	  "stats = false\n"
 	  "temporary_dir = ${USER}_foo\n"
@@ -160,7 +160,7 @@ TEST(conf_read_valid_config)
 	CHECK(conf->read_only);
 	CHECK(conf->read_only_direct);
 	CHECK(conf->recache);
-	CHECK(conf->run_second_cpp);
+	CHECK(!conf->run_second_cpp);
 	CHECK_INT_EQ(SLOPPY_INCLUDE_FILE_MTIME|SLOPPY_INCLUDE_FILE_CTIME|
 	             SLOPPY_FILE_MACRO|SLOPPY_TIME_MACROS|
 	             SLOPPY_FILE_STAT_MATCHES|SLOPPY_NO_SYSTEM_HEADERS|
@@ -385,7 +385,7 @@ TEST(conf_print_items)
 		true,
 		true,
 		true,
-		true,
+		.run_second_cpp = false,
 		SLOPPY_FILE_MACRO|SLOPPY_INCLUDE_FILE_MTIME|
 		SLOPPY_INCLUDE_FILE_CTIME|SLOPPY_TIME_MACROS|
 		SLOPPY_FILE_STAT_MATCHES|SLOPPY_PCH_DEFINES|
@@ -434,7 +434,7 @@ TEST(conf_print_items)
 	CHECK_STR_EQ("read_only = true", received_conf_items[n++].descr);
 	CHECK_STR_EQ("read_only_direct = true", received_conf_items[n++].descr);
 	CHECK_STR_EQ("recache = true", received_conf_items[n++].descr);
-	CHECK_STR_EQ("run_second_cpp = true", received_conf_items[n++].descr);
+	CHECK_STR_EQ("run_second_cpp = false", received_conf_items[n++].descr);
 	CHECK_STR_EQ("sloppiness = file_macro, include_file_mtime,"
 	             " include_file_ctime, time_macros, pch_defines,"
 	             " file_stat_matches, no_system_headers",
